--- a/style.css
+++ b/style.css
@@ -25,6 +25,18 @@ body {
     text-align: center;
 }
 
+.display {
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+.hide {
+    display: none;
+}
+
 #game-board {
     margin-left: auto;
     padding-top: 30px;
@@ -96,7 +108,7 @@ body {
 }
 
 
-#tile {
+.tile {
     border: 3px solid #76D8EE;
     min-width: 100px;
     min-height: 100px;
@@ -107,11 +119,11 @@ body {
     cursor: pointer;
 }
 
-#X {
+.playerX {
     color: #AEEE5D;
 }
 
-#O {
+.playerO {
     color: #61E7FA;
 }
 
